# radar-egui

./: .coderabbit.yaml  .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  items.md  pubspec.yaml  todo.md
assets/: map.rrd
docs/: laser-protocol.md  pointcloud-producer-spec.md
lib/: main.dart
lib/models/: laser_observation.dart  robo_master_info.dart
lib/pages/: radar_page.dart
lib/services/: tcp_client.dart  udp_client.dart
lib/theme/: app_theme.dart
lib/widgets/: ammo_panel.dart  blood_panel.dart  economy_panel.dart  gain_panel.dart  laser_panel.dart  minimap.dart  occupation_panel.dart  status_panels.dart
src/: app.rs  laser_protocol.rs  main.rs  protocol.rs  rerun_visualizer.rs  rerun_viz.rs  script_runner.rs  state.rs  state_snapshots.rs  tcp_client.rs  theme.rs  udp_client.rs  video_stream.rs
src/app/: assets.rs  connection.rs  mod.rs  theme_apply.rs  video_texture.rs  view.rs
src/laser/: mod.rs  observer.rs
src/pointcloud/: mod.rs  protocol.rs  reader.rs  visualizer.rs
src/runtime/: mod.rs
src/sdr/: client.rs
src/serial/: data_format.rs  mod.rs  robot_interaction_id.rs  serial.rs  serial_crc.rs  serial_package.rs  serial_parser.rs  serialconfig.rs
src/services/: mod.rs  process_control.rs  script_runner.rs
src/widgets/: laser_panel.rs  minimap.rs  mod.rs  panels.rs
src/zmq/: data_format.rs  mod.rs  zmq.rs  zmq_package.rs  zmq_parser.rs
test/: widget_test.dart
web/: index.html
windows/: CMakeLists.txt
windows/runner/: Runner.rc
