[package]
name = "radar-egui"
version = "0.1.0"
edition = "2021"
description = "Real-time radar HUD for RoboMaster competition"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
rerun = { version = "0.22", optional = true }
gst = { package = "gstreamer", version = "0.23", optional = true }
gst-app = { package = "gstreamer-app", version = "0.23", optional = true }
gst-video = { package = "gstreamer-video", version = "0.23", optional = true }

[features]
rerun = ["dep:rerun"]
video = ["dep:gst", "dep:gst-app", "dep:gst-video"]

[profile.release]
opt-level = 2
lto = "thin"
